# interprocess_win32_com

./: CMakeLists.txt  main.cpp
